user-api/k8s/user-api.spec.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-api

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  namespace: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: user-api-pod
  template:
    metadata:
      labels:
        name: user-api-pod
    spec:
      containers:
        - name: user-api
          image: clusterkuberegistry.azurecr.io/user-api:v3.3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: user-api-svc
  namespace: user-api
spec:
  selector:
    name: user-api-pod
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-api-ing
  namespace: user-api
spec:
  rules:
    - http:
        paths:
          - path: /user
            backend:
              serviceName: user-api-svc
              servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: user-api-svc2
  namespace: user-api
spec:
  selector:
    name: user-api-pod
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
